--- a/package.json
+++ b/package.json
@@ -131,6 +131,8 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1"
   }
 }
