--- a/package.json
+++ b/package.json
@@ -134,5 +134,6 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
-  }
+  },
+  "proxy": "http://xp.weilian.cn:8199"
 }
