--- a/package.json
+++ b/package.json
@@ -120,16 +120,22 @@
           "libraryDirectory": "es",
           "style": "css"
         }
-      ]
+      ],
+      ["@babel/plugin-proposal-decorators", { "legacy": true }],
+      ["@babel/plugin-proposal-class-properties", { "loose" : true }]
     ]
   },
   "homepage": ".",
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.2.3",
     "antd-mobile": "^2.2.6",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
