--- a/package.json
+++ b/package.json
@@ -121,11 +121,21 @@
           "style": "css"
         }
       ],
-      ["@babel/plugin-proposal-decorators", { "legacy": true }],
-      ["@babel/plugin-proposal-class-properties", { "loose" : true }]
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ]
     ]
   },
-  "homepage": ".",
+  "homepage": "/lottery/",
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "antd-mobile": "^2.2.6",
