--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
       ]
     ]
   },
-  "homepage": "/lottery/",
+  "homepage": ".",
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "antd-mobile": "^2.2.6",
